Bug 328185 - Cantor crash after close the application using Sage backend
Summary: Cantor crash after close the application using Sage backend
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: sage-backend (other bugs)
Version First Reported In: 0.3
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Filipe Saraiva
URL:
Keywords:
: 317631 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-11-28 18:24 UTC by Albert Meyburgh
Modified: 2016-05-27 18:27 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.08
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (6.59 KB, text/plain)
2014-02-02 22:02 UTC, nooniensoong97
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Meyburgh 2013-11-28 18:24:18 UTC
Application: cantor (0.3)
KDE Platform Version: 4.8.5 (4.8.5)
Qt Version: 4.8.1
Operating System: Linux 3.8.0-33-generic x86_64
Distribution: Ubuntu 12.04.3 LTS

-- Information about the crash:
- What I was doing when the application crashed:

opened cantor, had a sage backend, put "a=5", clicked evaluate worksheet, nothing happened so i closed it... then crash!

-- Backtrace:
Application: Cantor (cantor), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f5e02c82780 (LWP 3913))]

Thread 3 (Thread 0x7f5dee371700 (LWP 3916)):
#0  0x00007f5dffa1ea43 in poll () from /lib/x86_64-linux-gnu/libc.so.6
#1  0x00007f5dfc5a6ff6 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5dfc5a745a in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5dee37698b in ?? () from /usr/lib/x86_64-linux-gnu/gio/modules/libdconfsettings.so
#4  0x00007f5dfc5c89b5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f5dfca73e9a in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#6  0x00007f5dffa2a3fd in clone () from /lib/x86_64-linux-gnu/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f5dedb70700 (LWP 3917)):
#0  0x00007f5dffa1cffd in read () from /lib/x86_64-linux-gnu/libc.so.6
#1  0x00007f5dfc5e18df in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5dfc5a6b64 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5dfc5a6f96 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f5dfc5a745a in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f5df54c85e6 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#6  0x00007f5dfc5c89b5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f5dfca73e9a in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#8  0x00007f5dffa2a3fd in clone () from /lib/x86_64-linux-gnu/libc.so.6
#9  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f5e02c82780 (LWP 3913)):
[KCrash Handler]
#6  0x00007f5e00186a76 in QObject::connect (sender=0x1b8b2b0, signal=0x7f5dd2bd8e18 "2statusChanged(Cantor::Expression::Status)", receiver=0x15a7390, method=0x7f5dd2bd8dd8 "1currentExpressionChangedStatus(Cantor::Expression::Status)", type=Qt::AutoConnection) at kernel/qobject.cpp:2551
#7  0x00007f5dd2bcf318 in runFirstExpression (this=0x15a7390) at ../../../../src/backends/sage/sagesession.cpp:227
#8  SageSession::runFirstExpression (this=0x15a7390) at ../../../../src/backends/sage/sagesession.cpp:222
#9  0x00007f5e00185281 in QMetaObject::activate (sender=0x145a2e0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff47393c40) at kernel/qobject.cpp:3547
#10 0x00007f5e01d441b1 in Cantor::Expression::statusChanged (this=<optimized out>, _t1=Cantor::Expression::Interrupted) at ./expression.moc:124
#11 0x00007f5e01d441df in Cantor::Expression::setStatus (this=0x145a2e0, status=Cantor::Expression::Interrupted) at ../../../src/lib/expression.cpp:149
#12 0x00007f5dd2bd0a6c in SageExpression::interrupt (this=0x145a2e0) at ../../../../src/backends/sage/sageexpression.cpp:71
#13 0x00007f5dd2bd02c5 in SageSession::interrupt (this=0x15a7390) at ../../../../src/backends/sage/sagesession.cpp:242
#14 0x00007f5dd2bced62 in SageSession::logout (this=0x15a7390) at ../../../../src/backends/sage/sagesession.cpp:82
#15 0x00007f5dd18f4353 in Worksheet::~Worksheet (this=0x15f0fb0, __in_chrg=<optimized out>) at ../../src/worksheet.cpp:102
#16 0x00007f5dd18f4389 in Worksheet::~Worksheet (this=0x15f0fb0, __in_chrg=<optimized out>) at ../../src/worksheet.cpp:103
#17 0x00007f5e021f8cc3 in KParts::Part::~Part() () from /usr/lib/libkparts.so.4
#18 0x00007f5dd18eb8b4 in CantorPart::~CantorPart (this=0x15f2820, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at ../../src/cantor_part.cpp:230
#19 0x00007f5dd18eb8f9 in CantorPart::~CantorPart (this=0x15f2820, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at ../../src/cantor_part.cpp:237
#20 0x000000000040bddd in CantorShell::closeTab (this=0x1253480, widget=0x15f0fb0) at ../../src/cantor.cpp:361
#21 0x00007f5e00185281 in QMetaObject::activate (sender=0x12870c0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff47393fe0) at kernel/qobject.cpp:3547
#22 0x00007f5e02740d02 in KTabWidget::closeRequest(QWidget*) () from /usr/lib/libkdeui.so.5
#23 0x00007f5e00185281 in QMetaObject::activate (sender=0x12a7df0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff47394130) at kernel/qobject.cpp:3547
#24 0x00007f5e00fd99d1 in QTabBar::tabCloseRequested (this=<optimized out>, _t1=0) at .moc/release-shared/moc_qtabbar.cpp:222
#25 0x00007f5e00185281 in QMetaObject::activate (sender=0x196cd10, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff47394280) at kernel/qobject.cpp:3547
#26 0x00007f5e011fac72 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#27 0x00007f5e00f38a4e in QAbstractButtonPrivate::emitClicked (this=<optimized out>) at widgets/qabstractbutton.cpp:548
#28 0x00007f5e00f39d8b in QAbstractButtonPrivate::click (this=0x196e100) at widgets/qabstractbutton.cpp:541
#29 0x00007f5e00f39ffc in QAbstractButton::mouseReleaseEvent (this=0x196cd10, e=0x7fff47394b50) at widgets/qabstractbutton.cpp:1123
#30 0x00007f5e00bbb144 in QWidget::event (this=0x196cd10, event=0x7fff47394b50) at kernel/qwidget.cpp:8362
#31 0x00007f5e00b6a894 in notify_helper (e=0x7fff47394b50, receiver=0x196cd10, this=0xff90f0) at kernel/qapplication.cpp:4559
#32 QApplicationPrivate::notify_helper (this=0xff90f0, receiver=0x196cd10, e=0x7fff47394b50) at kernel/qapplication.cpp:4531
#33 0x00007f5e00b700bf in QApplication::notify (this=<optimized out>, receiver=0x196cd10, e=0x7fff47394b50) at kernel/qapplication.cpp:4102
#34 0x00007f5e026603f6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#35 0x00007f5e00170e9c in QCoreApplication::notifyInternal (this=0x7fff47395830, receiver=0x196cd10, event=0x7fff47394b50) at kernel/qcoreapplication.cpp:876
#36 0x00007f5e00b6b862 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#37 QApplicationPrivate::sendMouseEvent (receiver=0x196cd10, event=0x7fff47394b50, alienWidget=0x196cd10, nativeWidget=0x12a7df0, buttonDown=0x196cd10, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3170
#38 0x00007f5e00beabf5 in QETWidget::translateMouseEvent (this=0x12a7df0, event=<optimized out>) at kernel/qapplication_x11.cpp:4617
#39 0x00007f5e00be9bae in QApplication::x11ProcessEvent (this=0x7fff47395830, event=0x7fff47395420) at kernel/qapplication_x11.cpp:3732
#40 0x00007f5e00c130d2 in x11EventSourceDispatch (s=0xff9b20, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#41 0x00007f5dfc5a6d13 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#42 0x00007f5dfc5a7060 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#43 0x00007f5dfc5a7124 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#44 0x00007f5e001a03bf in QEventDispatcherGlib::processEvents (this=0xfd0b30, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#45 0x00007f5e00c12d5e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#46 0x00007f5e0016fc82 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#47 0x00007f5e0016fed7 in QEventLoop::exec (this=0x7fff473957c0, flags=...) at kernel/qeventloop.cpp:204
#48 0x00007f5e00174f67 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#49 0x000000000040a28f in main (argc=5, argv=0x7fff47395c08) at ../../src/main.cpp:88

This bug may be a duplicate of or related to bug 317631.

Possible duplicates by query: bug 317631.

Reported using DrKonqi
Comment 1 Jekyll Wu 2013-11-29 00:44:21 UTC
*** Bug 317631 has been marked as a duplicate of this bug. ***
Comment 2 nooniensoong97 2014-02-02 22:02:21 UTC
Created attachment 84954 [details]
New crash information added by DrKonqi

cantor (0.3) on KDE Platform 4.8.5 (4.8.5) using Qt 4.8.1

- What I was doing when the application crashed:

I set p to prime_range of 1000:             p=prime_range(1000)
and evaluated the list from 0 to 10:     p[0:10]

-- Backtrace (Reduced):
#7  0xb6032fae in QObject::connect (sender=0x905b940, signal=0xafcc5fdc "2statusChanged(Cantor::Expression::Status)", receiver=0x8e96d28, method=0xafcc5fa0 "1currentExpressionChangedStatus(Cantor::Expression::Status)", type=Qt::AutoConnection) at kernel/qobject.cpp:2551
#8  0xafcbb00d in runFirstExpression (this=0x8e96d28) at ../../../../src/backends/sage/sagesession.cpp:227
#9  SageSession::runFirstExpression (this=0x8e96d28) at ../../../../src/backends/sage/sagesession.cpp:222
[...]
#11 0xb71e6085 in Cantor::Expression::statusChanged (this=0x9115c68, _t1=Cantor::Expression::Interrupted) at ./expression.moc:124
#12 0xb71e60c4 in Cantor::Expression::setStatus (this=0x9115c68, status=Cantor::Expression::Interrupted) at ../../../src/lib/expression.cpp:149
Comment 3 Filipe Saraiva 2016-05-27 18:13:21 UTC
Git commit 47cd4f4ed40d5e799b376346e00fca1841fa0e2b by Filipe Saraiva.
Committed on 27/05/2016 at 18:12.
Pushed by filipesaraiva into branch 'master'.

Fix the crash of Cantor after close it using Sage backend
FIXED-IN: 16.08

M  +2    -2    src/backends/sage/sagesession.cpp

http://commits.kde.org/cantor/47cd4f4ed40d5e799b376346e00fca1841fa0e2b