Fix the crash of Cantor after close it using Sage backend

BUG: 328185
FIXED-IN: 16.08